@@ -502,14 +502,6 @@ public class OBMol extends OBBase {
     return openbabelJNI.OBMol_StripSalts(swigCPtr, this);
   }
 
-  public vectorMol Separate(int StartIndex) {
-    return new vectorMol(openbabelJNI.OBMol_Separate__SWIG_0(swigCPtr, this, StartIndex), true);
-  }
-
-  public vectorMol Separate() {
-    return new vectorMol(openbabelJNI.OBMol_Separate__SWIG_1(swigCPtr, this), true);
-  }
-
   public boolean ConvertDativeBonds() {
     return openbabelJNI.OBMol_ConvertDativeBonds(swigCPtr, this);
   }
