@@ -46858,172 +46858,6 @@ XS(_wrap_OBMol_StripSalts) {
 }
 
 
-XS(_wrap_OBMol_Separate__SWIG_0) {
-  {
-    OpenBabel::OBMol *arg1 = (OpenBabel::OBMol *) 0 ;
-    int arg2 ;
-    std::vector<OpenBabel::OBMol > result;
-    void *argp1 = 0 ;
-    int res1 = 0 ;
-    int val2 ;
-    int ecode2 = 0 ;
-    int argvi = 0;
-    dXSARGS;
-    
-    if ((items < 2) || (items > 2)) {
-      SWIG_croak("Usage: OBMol_Separate(self,StartIndex);");
-    }
-    res1 = SWIG_ConvertPtr(ST(0), &argp1,SWIGTYPE_p_OpenBabel__OBMol, 0 |  0 );
-    if (!SWIG_IsOK(res1)) {
-      SWIG_exception_fail(SWIG_ArgError(res1), "in method '" "OBMol_Separate" "', argument " "1"" of type '" "OpenBabel::OBMol *""'"); 
-    }
-    arg1 = reinterpret_cast< OpenBabel::OBMol * >(argp1);
-    ecode2 = SWIG_AsVal_int SWIG_PERL_CALL_ARGS_2(ST(1), &val2);
-    if (!SWIG_IsOK(ecode2)) {
-      SWIG_exception_fail(SWIG_ArgError(ecode2), "in method '" "OBMol_Separate" "', argument " "2"" of type '" "int""'");
-    } 
-    arg2 = static_cast< int >(val2);
-    result = (arg1)->Separate(arg2);
-    {
-      int len = (&result)->size();
-      SV **svs = new SV*[len];
-      for (unsigned int i=0; i<len; i++) {
-        OpenBabel::OBMol* ptr = new OpenBabel::OBMol(result[i]);
-        svs[i] = sv_newmortal();
-        SWIG_MakePtr(svs[i], (void*) ptr, 
-          SWIGTYPE_p_OpenBabel__OBMol, SWIG_SHADOW|0);
-      }
-      AV *myav = av_make(len, svs);
-      delete[] svs;
-      ST(argvi) = newRV_noinc((SV*) myav);
-      sv_2mortal(ST(argvi));
-      argvi++;
-    }
-    
-    
-    XSRETURN(argvi);
-  fail:
-    
-    
-    SWIG_croak_null();
-  }
-}
-
-
-XS(_wrap_OBMol_Separate__SWIG_1) {
-  {
-    OpenBabel::OBMol *arg1 = (OpenBabel::OBMol *) 0 ;
-    std::vector<OpenBabel::OBMol > result;
-    void *argp1 = 0 ;
-    int res1 = 0 ;
-    int argvi = 0;
-    dXSARGS;
-    
-    if ((items < 1) || (items > 1)) {
-      SWIG_croak("Usage: OBMol_Separate(self);");
-    }
-    res1 = SWIG_ConvertPtr(ST(0), &argp1,SWIGTYPE_p_OpenBabel__OBMol, 0 |  0 );
-    if (!SWIG_IsOK(res1)) {
-      SWIG_exception_fail(SWIG_ArgError(res1), "in method '" "OBMol_Separate" "', argument " "1"" of type '" "OpenBabel::OBMol *""'"); 
-    }
-    arg1 = reinterpret_cast< OpenBabel::OBMol * >(argp1);
-    result = (arg1)->Separate();
-    {
-      int len = (&result)->size();
-      SV **svs = new SV*[len];
-      for (unsigned int i=0; i<len; i++) {
-        OpenBabel::OBMol* ptr = new OpenBabel::OBMol(result[i]);
-        svs[i] = sv_newmortal();
-        SWIG_MakePtr(svs[i], (void*) ptr, 
-          SWIGTYPE_p_OpenBabel__OBMol, SWIG_SHADOW|0);
-      }
-      AV *myav = av_make(len, svs);
-      delete[] svs;
-      ST(argvi) = newRV_noinc((SV*) myav);
-      sv_2mortal(ST(argvi));
-      argvi++;
-    }
-    
-    XSRETURN(argvi);
-  fail:
-    
-    SWIG_croak_null();
-  }
-}
-
-
-XS(_wrap_OBMol_Separate) {
-  dXSARGS;
-  
-  {
-    unsigned long _index = 0;
-    SWIG_TypeRank _rank = 0; 
-    if (items == 1) {
-      SWIG_TypeRank _ranki = 0;
-      SWIG_TypeRank _rankm = 0;
-      SWIG_TypeRank _pi = 1;
-      int _v = 0;
-      {
-        void *vptr = 0;
-        int res = SWIG_ConvertPtr(ST(0), &vptr, SWIGTYPE_p_OpenBabel__OBMol, 0);
-        _v = SWIG_CheckState(res);
-      }
-      if (!_v) goto check_1;
-      _ranki += _v*_pi;
-      _rankm += _pi;
-      _pi *= SWIG_MAXCASTRANK;
-      if (!_index || (_ranki < _rank)) {
-        _rank = _ranki; _index = 1;
-        if (_rank == _rankm) goto dispatch;
-      }
-    }
-  check_1:
-    
-    if (items == 2) {
-      SWIG_TypeRank _ranki = 0;
-      SWIG_TypeRank _rankm = 0;
-      SWIG_TypeRank _pi = 1;
-      int _v = 0;
-      {
-        void *vptr = 0;
-        int res = SWIG_ConvertPtr(ST(0), &vptr, SWIGTYPE_p_OpenBabel__OBMol, 0);
-        _v = SWIG_CheckState(res);
-      }
-      if (!_v) goto check_2;
-      _ranki += _v*_pi;
-      _rankm += _pi;
-      _pi *= SWIG_MAXCASTRANK;
-      {
-        {
-          int res = SWIG_AsVal_int SWIG_PERL_CALL_ARGS_2(ST(1), NULL);
-          _v = SWIG_CheckState(res);
-        }
-      }
-      if (!_v) goto check_2;
-      _ranki += _v*_pi;
-      _rankm += _pi;
-      _pi *= SWIG_MAXCASTRANK;
-      if (!_index || (_ranki < _rank)) {
-        _rank = _ranki; _index = 2;
-        if (_rank == _rankm) goto dispatch;
-      }
-    }
-  check_2:
-    
-  dispatch:
-    switch(_index) {
-    case 1:
-      ++PL_markstack_ptr; SWIG_CALLXS(_wrap_OBMol_Separate__SWIG_1); return;
-    case 2:
-      ++PL_markstack_ptr; SWIG_CALLXS(_wrap_OBMol_Separate__SWIG_0); return;
-    }
-  }
-  
-  croak("No matching function for overloaded 'OBMol_Separate'");
-  XSRETURN(0);
-}
-
-
 XS(_wrap_OBMol_ConvertDativeBonds) {
   {
     OpenBabel::OBMol *arg1 = (OpenBabel::OBMol *) 0 ;
@@ -99444,7 +99278,6 @@ static swig_command_info swig_commands[] = {
 {"Chemistry::OpenBabelc::OBMol_AddHydrogens", _wrap_OBMol_AddHydrogens},
 {"Chemistry::OpenBabelc::OBMol_AddPolarHydrogens", _wrap_OBMol_AddPolarHydrogens},
 {"Chemistry::OpenBabelc::OBMol_StripSalts", _wrap_OBMol_StripSalts},
-{"Chemistry::OpenBabelc::OBMol_Separate", _wrap_OBMol_Separate},
 {"Chemistry::OpenBabelc::OBMol_ConvertDativeBonds", _wrap_OBMol_ConvertDativeBonds},
 {"Chemistry::OpenBabelc::OBMol_CorrectForPH", _wrap_OBMol_CorrectForPH},
 {"Chemistry::OpenBabelc::OBMol_AssignSpinMultiplicity", _wrap_OBMol_AssignSpinMultiplicity},
